# Sandtris

./: .gitignore  README.md  grid.py  particle.py  player.py  pyproject.toml  sand_box.py  sand_tetromino.py  simulation.py
AI/: headless_train.py  tetris_nn.py  train.py
sandtris/: __init__.py  __main__.py
sandtris/ai/: __init__.py  actions.py  env.py  eval.py  heuristic.py  observation.py  rewards.py  tetris_nn.py  train.py
sandtris/app/: __init__.py  player.py
sandtris/core/: __init__.py  clears.py  constants.py  grid.py  particles.py  sandbox.py  scoring.py  simulation.py  tetromino.py
tests/: test_ai_env.py  test_ai_eval.py  test_ai_heuristic.py  test_ai_legacy.py  test_ai_model.py  test_ai_observation.py  test_ai_placement_action.py  test_ai_rewards.py  test_clears.py  test_scoring.py  test_simulation.py
