[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sandtris"
version = "0.1.0"
description = "A sand-physics twist on Tetris."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pygame>=2.5",
]

[project.optional-dependencies]
ai = [
    "scipy>=1.10",
    "torch>=2.0",
]
test = [
    "pytest>=8.0",
]

[project.scripts]
sandtris = "sandtris.app.player:main"

[tool.setuptools.packages.find]
include = ["sandtris*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
